--- a/_templates/mustache/skeleton-ml/{{name}}/src/{{parent}}/META.bak.mustache
+++ b/_templates/mustache/skeleton-ml/{{name}}/src/{{parent}}/META.bak.mustache
@@ -1,9 +1,9 @@
 package "{{project}}{{^project}}util{{/project}}" (
  version = "{{version}}{{^version}}0.1.0{{/version}}"
- description = "{{description}}{{^description}}Utilites sub-package for OCaml Intro examples project.{{/description}}"
+ description = "{{description}}{{^description}}Utilities sub-package for OCaml Intro examples project.{{/description}}"
  directory = "{{project}}{{^project}}util{{/project}}"
- requires = "unix num str"
- #requires = "unix num str ctypes ctypes.foreign"
+ requires = "unix num str dynlink"
+ #requires = "unix num str dynlink ctypes ctypes.foreign"
  archive(byte) = "{{name}}{{^name}}intro_ml-util{{/name}}.cma"
  archive(byte, plugin) = "{{name}}{{^name}}intro_ml-util{{/name}}.cma"
  archive(native) = "{{name}}{{^name}}intro_ml-util{{/name}}.cmxa"
