--- a/_templates/mustache/skeleton-ml/{{name}}/choices/post_gen_project.groovy.mustache
+++ b/_templates/mustache/skeleton-ml/{{name}}/choices/post_gen_project.groovy.mustache
@@ -22,7 +22,7 @@ def run_cmd(String cmd, File dir) {
 def choices = [
 	'readmeext': '{{readmeext}}{{^readmeext}}.rst{{/readmeext}}',
 	'license': '{{license}}{{^license}}Apache-2.0{{/license}}',
-	'buildtool': '{{buildtool}}{{^buildtool}}oasis{{/buildtool}}',
+	'buildtool': '{{buildtool}}{{^buildtool}}dune{{/buildtool}}',
 	'testfrwk': '{{testfrwk}}{{^testfrwk}}ounit{{/testfrwk}}',
 	'executable': '{{executable}}{{^executable}}no{{/executable}}',
 	'ffilib': '{{ffilib}}{{^ffilib}}none{{/ffilib}}'
@@ -37,39 +37,41 @@ def parent = '{{parent}}{{^parent}}intro_ml{{/parent}}'
 	cmd -> run_cmd(cmd, dirX) }
 
 run_cmd("cp -v build/choices/readme/README${choices['readmeext']} README${choices['readmeext']}", dirX)
-run_cmd("cp -v build/choices/_parent_readme/README${choices['readmeext']} build/choices/_parent_init/README${choices['readmeext']}", dirX)
+if (Files.exists(Paths.get("build/choices/_parent_readme"))) {
+	run_cmd("cp -v build/choices/_parent_readme/README${choices['readmeext']} build/choices/_parent_init/README${choices['readmeext']}", dirX)
+}
 
-if (choices['license'] in ['Apache-2.0', 'MIT', 'BSD-3-Clause', 'GPL-3.0+',
-		'ISC', 'Unlicense']) {
+if (choices['license'] in ['Apache-2.0', 'MIT', 'BSD-3-Clause', 'GPL-3.0+', 'ISC', 
+		'Unlicense']) {
 	run_cmd("cp -v build/choices/license/LICENSE_${choices['license']} LICENSE", dirX)
 }
 
-if (choices['buildtool'] in ['oasis', 'ocamlbuild', 'make']) {
+if (Files.exists(Paths.get("${dirX}/build/choices/build_tool")) && (choices['buildtool'] in ['dune', 'oasis', 'ocamlbuild', 'make'])) {
 	def files = glob_files("${dirX}/build/choices/build_tool/${choices['buildtool']}")
 	run_cmd("cp -vR ${files.join(' ')} .", dirX)
-} else { // default: oasis
-	def files = glob_files("${dirX}/build/choices/build_tool/oasis")
+} else if (Files.exists(Paths.get("${dirX}/build/choices/build_tool"))) { // default: dune
+	def files = glob_files("${dirX}/build/choices/build_tool/dune")
 	run_cmd("cp -vR ${files.join(' ')} .", dirX)
 }
 
-if (choices['testfrwk'] in ['ounit']) {
+if (Files.exists(Paths.get("${dirX}/build/choices/testfrwk")) && (choices['testfrwk'] in ['ounit'])) {
 	def files = glob_files("${dirX}/build/choices/testfrwk/${choices['testfrwk']}")
 	run_cmd("cp -vR ${files.join(' ')} .", dirX)
-} else { // default: ounit
+} else if (Files.exists(Paths.get("${dirX}/build/choices/testfrwk"))) { // default: ounit
 	def files = glob_files("${dirX}/build/choices/testfrwk/ounit")
 	run_cmd("cp -vR ${files.join(' ')} .", dirX)
 }
 
-if ('yes' != choices['executable']) {
-    run_cmd("rm -vf src/${parent}/main.c", dirX)
+if (Files.exists(Paths.get("${dirX}/src")) && ('yes' != choices['executable'])) {
+    run_cmd("rm -vf src/${parent}/main.*", dirX)
 }
 
-if (choices['ffilib'] in ['ctypes.foreign', 'swig']) {
+if (Files.exists(Paths.get("${dirX}/build/choices/ffi_lib")) && (choices['ffilib'] in ['ctypes.foreign', 'swig'])) {
 	def files = glob_files("${dirX}/build/choices/ffi_lib/${choices['ffilib']}")
 	run_cmd("cp -vR ${files.join(' ')} src/${parent}/", dirX)
 }
 
-if (Files.exists(Paths.get("../_templates")) || Files.exists(Paths.get("_templates"))) {
+if (Files.exists(Paths.get("_templates")) && Files.isDirectory(Paths.get("_templates"))) {
 	def skeletondir = '{{skeletondir}}{{^skeletondir}}${System.env["HOME"]}/Templates/mustache/skeleton-ml{{/skeletondir}}'
 	def skelParDir = (new File(skeletondir)).parent
 	def scripts = glob_files("${skelParDir}").findAll{f -> 
