--- a/_templates/mustache/skeleton-ml/{{name}}/src/{{parent}}/main.sh.mustache
+++ b/_templates/mustache/skeleton-ml/{{name}}/src/{{parent}}/main.sh.mustache
@@ -1,6 +1,6 @@
 #!/bin/sh
 # (*
-BOLT_CONFIG=resources/bolt_new.conf BISECT_FILE=_build/bisect_main exec ocaml -w +a-4 -safe-string -strict-sequence -short-paths -strict-formats -I `ocamlfind query bisect` -I `ocamlfind query bolt` -I src -I _build/src/{{parent}}{{^parent}}intro_ml{{/parent}} $0 $@
+BOLT_CONFIG=resources/bolt_new.conf BISECT_FILE=_build/bisect_main exec ocaml -w +a-4 -safe-string -strict-sequence -short-paths -strict-formats -I `ocamlfind query bisect` -I `ocamlfind query volt` -I src -I _build/src/{{parent}}{{^parent}}intro_ml{{/parent}} $0 $@
 exit
 *) use "topfind" ;;
 (* #!/usr/bin/env ocaml *)
@@ -20,7 +20,7 @@ let () =
 #require "str" ;;   (* #load "str.cma" ;; *)
 #require "num" ;;   (* #load "nums.cma" ;; *)
 
-(* #directory "~/.opam/system/lib/bolt" ;; *)
+(* #directory "~/.opam/system/lib/volt" ;; *)
 
 #require "bytes" ;;
 #require "bigarray" ;;
@@ -35,7 +35,7 @@ open Core.Std ;; *)
 open BatteriesThread ;;           (* open Batteries ;; *) *)
 
 #load "bisect.cma" ;;
-#load "bolt.cma" ;;
+#load "volt.cma" ;;
 #require "pcre" ;;
 #require "inifiles" ;;
 #require "yojson" ;;
